# DocuMind-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FINAL_YEAR_PROJECT_GUIDE.md  PRESENTATION_OUTLINE.md  PROJECT_PLAN.md  PROJECT_REPORT.md  RAG_PIPELINE.md  SETUP.md  SRS.md  SYNOPSIS.md  TESTING_AND_EVALUATION.md  USER_GUIDE.md  VECTOR_STORES.md  VIVA_QUESTIONS.md
examples/: api_requests.http  sample_knowledge_base.md
src/documind_ai/: __init__.py  api.py  config.py  llm.py  loaders.py  models.py  rag.py  streamlit_app.py  text_splitter.py  vector_store.py
tests/: test_text_splitter.py
